# amethyst-colorizer

./: .gitignore  Cargo.toml  LICENSE_TEMPLATE.md  README.md
res/: colors.json  default.json
src/: config.rs  lib.rs
