[package]
name = "amethyst-colorizer"
description = "A small utility website that automatically converts amethyst into their dyeable variants."
authors = ["Jaxydog"]
categories = ["command-line-utilities", "multimedia::images"]
keywords = ["amethyst", "astral", "minecraft", "shuttle"]

version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "AGPL-3.0-or-later"
repository = "https://github.com/Jaxydog/amethyst-colorizer"

[[bin]]
name = "amethyst-colorizer"
path = "src/bin/main.rs"
required-features = ["cli"]

[lib]
name = "amethyst_colorizer"
path = "src/lib.rs"

[features]
default = ["cli"]
cli = []

[dependencies]
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shuttle-axum = "0.41"
shuttle-runtime = "0.41"
tera = "1.19"
tokio = "1.28"
