[package]
name = "amethyst-colorizer"
description = "A small utility website that automatically converts amethyst into their dyeable variants."
authors = ["Jaxydog"]
categories = ["command-line-utilities", "multimedia::images"]
keywords = ["amethyst", "astral", "minecraft", "shuttle"]

version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "AGPL-3.0-or-later"
repository = "https://github.com/Jaxydog/amethyst-colorizer"

[[bin]]
name = "amethyst-colorizer"
path = "src/bin/cli.rs"
required-features = ["cli"]

[lib]
name = "amethyst_colorizer"
path = "src/lib.rs"

[features]
default = ["cli"]
cli = ["clap", "dep:anyhow"]
clap = ["dep:clap"]

[dependencies]
anyhow = { version = "1.0", optional = true }
clap = { version = "4.5", features = ["derive"], optional = true }
image = { version = "0.25", default-features = false, features = ["png", "rayon"] }
palette = "0.7"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
